# MapleEngine

./: .gitmodules  README.md
Code/Maple/: CMakeLists.txt
Code/Maple/lib/SPIRV-Cross/: spirv_glsl.hpp
Code/Maple/lib/imgui/: CMakeLists.txt
Code/Maple/lib/imgui-notify/: imgui_notify.h
Code/Maple/lib/imgui/src/: ImGuiEnttEditor.hpp  imgui.h  imgui_impl_vulkan.cpp
Code/Maple/lib/libiconv/: Android.mk  CMakeLists.txt
Code/Maple/lib/libiconv/src/: config.h  iconv.c  iconv.h  libiconv.vcxproj  libiconv.vcxproj.filters  localcharset.c
Code/Maple/lib/vulkan-mem/: vk_mem_alloc.h
Code/Maple/src/: Application.cpp  Application.h  Main.h
Code/Maple/src/2d/: Sprite.cpp  Sprite.h  SpriteSystem.cpp  SpriteSystem.h
Code/Maple/src/Animation/: Animation.cpp  Animation.h  AnimationController.cpp  AnimationController.h  AnimationCurve.cpp  AnimationCurve.h  AnimationSystem.cpp  AnimationSystem.h  Animator.cpp  Animator.h
Code/Maple/src/Devices/: Input.cpp  Input.h  InputExport.cpp  InputExport.h  KeyCodes.h  Mouse.h
Code/Maple/src/Engine/: Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  CaptureGraph.cpp  CaptureGraph.h  Core.h  GBuffer.cpp  GBuffer.h  IconsDefine.inl  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Profiler.h  Quad2D.cpp  Quad2D.h  QuadTree.h  Terrain.cpp  Terrain.h  TextureAtlas.cpp  TextureAtlas.h  TexturePool.cpp  TexturePool.h  Timestep.h  Vertex.cpp  Vertex.h
Code/Maple/src/Engine/AmbientOcclusion/: SSAORenderer.cpp  SSAORenderer.h
Code/Maple/src/Engine/DDGI/: DDGIRenderer.cpp  DDGIRenderer.h  DDGIVisualization.cpp  DDGIVisualization.h  IrradianceVolume.cpp  IrradianceVolume.h
Code/Maple/src/Engine/LPVGI/: LPVIndirectLighting.cpp  LPVIndirectLighting.h  LightPropagationVolume.cpp  LightPropagationVolume.h  ReflectiveShadowMap.cpp  ReflectiveShadowMap.h
Code/Maple/src/Engine/Noise/: BlueNoise.cpp  BlueNoise.h
Code/Maple/src/Engine/PathTracer/: PathIntegrator.cpp  PathIntegrator.h  TracedData.h
Code/Maple/src/Engine/Raytrace/: AccelerationStructure.cpp  AccelerationStructure.h  RaytraceScale.h  RaytracedReflection.cpp  RaytracedReflection.h  RaytracedShadow.cpp  RaytracedShadow.h
Code/Maple/src/Engine/Renderer/: AtmosphereRenderer.cpp  AtmosphereRenderer.h  CloudRenderer.cpp  CloudRenderer.h  Common.h  DeferredOffScreenRenderer.cpp  DeferredOffScreenRenderer.h  FinalPass.cpp  FinalPass.h  GeometryRenderer.cpp  GeometryRenderer.h  GridRenderer.cpp  GridRenderer.h  PostProcessRenderer.cpp  PostProcessRenderer.h  PrefilterRenderer.cpp  PrefilterRenderer.h  PreviewRenderer.h  RenderGraph.cpp  RenderGraph.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererData.h  ShadowRenderer.cpp  ShadowRenderer.h  SkyboxRenderer.cpp  SkyboxRenderer.h
Code/Maple/src/Engine/VXGI/: DrawVoxel.cpp  DrawVoxel.h  VoxelBufferId.h  Voxelization.cpp  Voxelization.h
Code/Maple/src/Engine/Vientiane/: DrawVoxel.cpp  DrawVoxel.h  LPVIndirectLighting.cpp  LPVIndirectLighting.h  LightPropagationVolume.cpp  LightPropagationVolume.h  ReflectiveShadowMap.cpp  ReflectiveShadowMap.h  Voxelization.cpp  Voxelization.h
Code/Maple/src/Event/: Event.h  EventDispatcher.cpp  EventDispatcher.h  EventHandler.cpp  EventHandler.h  WindowEvent.cpp  WindowEvent.h
Code/Maple/src/FileSystem/: Cache.h  FBXLoader.cpp  FBXLoader.h  File.cpp  File.h  GLTFLoader.cpp  GLTFLoader.h  IResource.h  Image.cpp  Image.h  ImageLoader.cpp  ImageLoader.h  MeshLoader.cpp  MeshLoader.h  MeshResource.cpp  MeshResource.h  OBJLoader.cpp  OBJLoader.h  Skeleton.cpp  Skeleton.h
Code/Maple/src/ImGui/: ImGuiHelpers.cpp  ImGuiHelpers.h  ImGuiSystem.cpp  ImGuiSystem.h  ImNotification.cpp  ImNotification.h  VkImGUIRenderer.cpp  VkImGUIRenderer.h
Code/Maple/src/Loaders/: FBXLoader.cpp  FBXLoader.h  GLTFLoader.cpp  GLTFLoader.h  ImageLoader.cpp  ImageLoader.h  Loader.cpp  Loader.h  OBJLoader.cpp  OBJLoader.h
Code/Maple/src/Math/: BoundingBox.cpp  BoundingBox.h  Frustum.cpp  Frustum.h  MathUtils.h  Plane.h  Ray.cpp  Ray.h  Rect2D.cpp  Rect2D.h
Code/Maple/src/Others/: AdvancedTimer.h  AdvancedTimer.inl  Console.cpp  Console.h  HashCode.h  Interpolation.cpp  Interpolation.h  LogExport.cpp  Noise.cpp  Noise.h  RenderDocExt.cpp  RenderDocExt.h  Serialization.cpp  Serialization.h  StringUtils.cpp  StringUtils.h  Timer.h
Code/Maple/src/Physics/: Collider.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.h
Code/Maple/src/RHI/: AccelerationStructure.cpp  AccelerationStructure.h  BufferLayout.cpp  BufferLayout.h  BufferUsage.h  CommandBuffer.h  Definitions.h  DescriptorSet.cpp  DescriptorSet.h  FrameBuffer.h  GPUProfile.h  GraphicsContext.cpp  GraphicsContext.h  ImGuiRenderer.h  IndexBuffer.h  Pipeline.h  RenderDevice.cpp  RenderDevice.h  RenderPass.h  Shader.cpp  Shader.h  StorageBuffer.h  SwapChain.h  Texture.cpp  Texture.h  UniformBuffer.h  VertexBuffer.h
Code/Maple/src/RHI/ImGui/: GLImGuiRenderer.cpp  GLImGuiRenderer.h  VKImGuiRenderer.cpp
Code/Maple/src/RHI/OpenGL/: GL.cpp  GL.h  GLCommandBuffer.cpp  GLCommandBuffer.h  GLContext.cpp  GLContext.h  GLDescriptorSet.cpp  GLDescriptorSet.h  GLFrameBuffer.cpp  GLFrameBuffer.h  GLFunc.inl  GLIndexBuffer.cpp  GLIndexBuffer.h  GLPipeline.cpp  GLPipeline.h  GLRenderDevice.cpp  GLRenderDevice.h  GLRenderPass.cpp  GLRenderPass.h  GLShader.cpp  GLShader.h  GLStorageBuffer.cpp  GLStorageBuffer.h  GLSwapChain.cpp  GLSwapChain.h  GLTexture.cpp  GLTexture.h  GLVertexBuffer.h  (+3 more)
Code/Maple/src/Resources/: Cache.h  MeshResource.cpp  MeshResource.h  Resources.h  ShaderResource.h  TextureCache.cpp  TextureCache.h
Code/Maple/src/Scene/: Scene.cpp  Scene.h  SceneGraph.cpp  SceneGraph.h  SceneManager.cpp  SceneManager.h  SystemBuilder.inl
Code/Maple/src/Shaders/: DeferredColor.frag  DeferredColor.vert  DeferredColorAnim.vert  DeferredLight.frag
Code/Maple/src/Terrain/: QuadCollapseMesh.cpp  QuadCollapseMesh.h  TerrainBuilder.cpp  TerrainBuilder.h
Code/Maple/src/Thread/: ParallelForEach.h  ThreadPool.cpp  ThreadPool.h
Code/Maple/src/Window/: NativeWindow.cpp  NativeWindow.h  WindowWin.cpp  WindowWin.h
(+389 files in other folders)
